<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Warframe Sentinel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="press_back_to_leave">Please click BACK again to exit</string>
    <string name="reward">Reward</string>
    <string name="level">Level</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="percent">Percent</string>
    <string name="news">News</string>
    <string name="alerts">Alerts</string>
    <string name="invasions">Invasions</string>
    <string name="darvo">Darvo</string>
    <string name="traders">Traders/Baro</string>
    <string name="sorties">Sorties</string>
    <string name="fissures">Fissures</string>
    <string name="cetus">Cetus</string>
    <string name="completed">Completed</string>
    <string name="current">Current</string>
    <string name="condition">Condition</string>
    <string name="reset_timer">Reset timer</string>
    <string name="rewards">Rewards</string>
    <string name="settings">Settings</string>
    <string name="platform">Platform</string>
    <string name="notification">Notification</string>
    <string name="general">General</string>
    <string name="plats">Plats</string>
    <string name="left">left</string>
    <string name="credit">Credit</string>
    <string name="ducat">Ducat</string>
    <string name="ducats">Ducats</string>
    <string name="item_name">Item name</string>
    <string name="missions">Missions</string>
    <string name="bounties">Bounties</string>
    <string name="waiting_bounty">Waiting bounties data …</string>
    <string name="timers">Timers</string>
    <string name="orb_vallis">Orb Vallis</string>
    <string name="day_night">Day/Night Cycle</string>
    <string name="night">Day</string>
    <string name="day">Night</string>
    <string name="warm">Warm</string>
    <string name="cold">Cold</string>
    <string name="indeterminate">Indeterminate</string>
    <string name="possible_rewards">Possible rewards</string>
    <string name="pvp">PVP Challenge</string>
    <string name="darvo_market">Darvo/Market</string>
    <string name="baro_kiteer">Baro KiTeer</string>
    <string name="darvo_sales">Darvo sales</string>
    <string name="market_items">Market items</string>
    <string name="reduction">Reduction</string>
    <string name="items_left">Items left</string>
    <string name="total">Total</string>
    <string name="status">Status</string>
    <string name="construction_status">Construction Status</string>
    <string name="fomorian">Fomorian</string>
    <string name="razorback">Razorback Armada</string>
    <string name="date">Date</string>
    <string name="time_left">Time left</string>
    <string name="cetus_waiting_reset">Waiting for the new end time …</string>
    <string name="syndicate">Syndicate</string>
    <string name="world_cycle">World Cycles</string>
    <string name="earth">Earth</string>
    <string name="time_ago">ago</string>
    <string name="events">Events</string>
    <string name="mode">Mode</string>
    <string name="nightwave">Nightwave</string>
    <string name="Daily">Daily</string>
    <string name="Weekly">Weekly</string>
    <string name="WeeklyHard">Weekly Hard</string>
    <string name="project_progress">%1$s%%</string>
    <string name="tab_name_quantity">%1$s (%2$s)</string>
    <string name="invasion_versus">%1$s vs %2$s</string>
    <string name="invasion_progress">%1$s%%</string>
    <string name="invasion_reward">%1$s</string>
    <string name="invasion_rewards">%1$s x %2$s</string>
    <string name="alert_reward">%1$s</string>
    <string name="alert_rewards">%1$s x %2$s</string>
    <string name="news_date_ago">%1$s ago</string>
    <string name="sortie_drop_chance">>%1$s%%</string>
    <string name="construction_project_progress">>%1$s%%</string>
    <string name="syndicate_level">Level: %1$s</string>
    <string name="sortie_level">Level: %1$s</string>
    <string name="void_trader_ducat_price">%1$s Ducats</string>
    <string name="credits">%1$s Credits</string>
    <string name="season_info">%1$s | Season %2$s-%3$s</string>
    <string name="time_before_reset">Time before reset: %1$s</string>
    <string name="world_cycle_timer">%1$s: %2$s in %3$s, at %4$s</string>
    <string name="start_in">Start in %1$s</string>
    <string name="end_in">End in %1$s</string>
    <string name="enemy_level">Level: %1$s - %2$s</string>
    <string name="mission_type">%1$s - %2$s</string>
    <string name="total_standing">Total : %1$s</string>
    <string name="price_and_discount">%1$s%% off: %2$s -> %3$s</string>
    <string name="item_amount_left">%1$s/%2$s left</string>
    <string-array name="cetus_cycle">
        <item>Day</item>
        <item>Night</item>
    </string-array>
    <string-array name="orb_vallis_cycle">
        <item>Warm</item>
        <item>Cold</item>
    </string-array>
    <string name="SteelMeridianSyndicate">Steel Merdian</string>
    <string name="ArbitersSyndicate">Arbiter of Hexis</string>
    <string name="CephalonSudaSyndicate">Cephalon Suda</string>
    <string name="PerrinSyndicate">Perrin Sequence</string>
    <string name="RedVeilSyndicate">Red Veil</string>
    <string name="NewLokaSyndicate">New Loka</string>
    <string name="Eventium">Synthula</string>
    <string name="AlertFusionBundleSmall">80 Endo</string>
    <string name="AlertFusionBundleMedium">100 Endo</string>
    <string name="AlertFusionBundleLarge">150 Endo</string>
    <string name="ChemComponent">Detonite Injector</string>
    <string name="EnergyComponent">Fieldron</string>
    <string name="BioComponent">Mutagen Mass</string>
    <string name="RobotPoorAimAuraMod">EMP AURA</string>
    <string name="AlloyPlate">Alloy Plate</string>
    <string name="PolymerBundle">Polymer Bundle</string>
    <string name="Salvage">Salvage</string>
    <string name="Alertium">Nitain Extract</string>
    <string name="InfestedAladCoordinate">Mutalist Alad V Nav Coordinate</string>
    <string name="VoidTearDrop">Void Traces</string>
    <string name="Nanospores">Nano Spores</string>
    <string name="Rubedo">Rubedo</string>
    <string name="NeuralSensor">Neural Sensor</string>
    <string name="ControlModule">Control Module</string>
    <string name="OxiumAlloy">Oxium</string>
    <string name="PlayerEnergyRegenAuraMod">Energy Siphon</string>
    <string name="DualDaggerAxeBlueprint">Dual Zoren Dagger-Axe</string>
    <string name="Gallium">Gallium</string>
    <string name="RendingStrikeMod">Rending Strike</string>
    <string name="StunningSpeedMod">Stunning Speed</string>
    <string name="ReloadSpeedPunchThroughMod">Seeking Furry</string>
    <string name="ShredMod">Shred</string>
    <string name="Ferrite">Ferrite</string>
    <string name="Morphic">Morphic</string>
    <string name="Tellurium">Tellurium</string>
    <string name="ArgonCrystal">Argon Crystal</string>
    <string name="Neurode">Neurode</string>
    <string name="SentinelLootRadarEnnemyRadarMod">Animal Instinct</string>
    <string name="TrapperHelmetBlueprint">Vauban Helmet Blueprint</string>
    <string name="DarkDaggerBlueprint">Dark Dagger Blueprint</string>
    <string name="FormaBlueprint">Forma Blueprint</string>
    <string name="UtilityUnlockerBlueprint">Exilus Adapter Blueprint</string>
    <string name="DeraVandalBlueprint">Dera Vandal Blueprint</string>
    <string name="DeraVandalBarrel">Dera Vandal Barrel</string>
    <string name="TwinVipersWraithBarrel">Twin Vipers Wraith Barrel</string>
    <string name="TwinVipersWraithReceiver">Twin Vipers Wraith Receiver</string>
    <string name="PangolinSwordBlueprint">Pangolin Sword Blueprint</string>
    <string name="StatlessV2LokiAltHelmetBlueprint">Loki Swindle Helmet Blueprint</string>
    <string name="StatlessV2VoltAltHelmetBlueprint">Volt Pulse Helmet Blueprint</string>
    <string name="StatlessV2RhinoAltHelmetBlueprint">Rhino Vanguard Helmet Blueprint</string>
    <string name="StatlessV2ExcaliburAltHelmetBlueprint">Excalibur Pendragon Helmet Blueprint</string>
    <string name="StatlessLokiAltHelmetBlueprint">Loki Essence Helmet Blueprint</string>
    <string name="StatlessFrostAltHelmetBlueprint">Frost Aurora Helmet Blueprint</string>
    <string name="StatlessRhinoAltHelmetBlueprint">Rhino Thrak Helmet Blueprint</string>
    <string name="StatlessMagAltHelmetBlueprint">Mag Coil Helmet Blueprint</string>
    <string name="StatlessTrinityAltHelmetBlueprint">Trinity Aura Helmet</string>
    <string name="CowgirlAltHelmetBlueprint">Mesa Longhorn Helmet Blueprint</string>
    <string name="RangerAltHelmetBlueprint">Ivara Loxley Helmet Blueprint</string>
    <string name="WukongAltHelmetBlueprint">Wukong Dasheng Helmet Blueprint</string>
    <string name="ValkyrAltBHelmetBlueprint">Valkyr Kara Helmet Blueprint</string>
    <string name="MesaAltBHelmetBlueprint">Mesa Ovis Helmet Blueprint</string>
    <string name="LimboAristeasHelmetBlueprint">Limbo Aristeas Helmet Blueprint</string>
    <string name="NovaQuantumHelmetBlueprint">Nova Quantum Helmet Blueprint</string>
    <string name="NekrosAraknidHelmetBlueprint">Nekros Raknis Helmet Blueprint</string>
    <string name="GlassAltHelmet">Gara Virago Helmet</string>
    <string name="LotusRifleRandomModRare">Rifle Riven Mod</string>
    <string name="PlayerShellAmmoAuraMod">Shotgun Scavenger</string>
    <string name="InfestationSpeedReductionAuraMod">Infested Impedance</string>
    <string name="VigorMod">Vigor</string>
    <string name="AkimboShotGun">Akbronco</string>
    <string name="TnGlassShotgunGun">Astilla</string>
    <string name="GrnEgyptSwdWeapon">Krohkur</string>
    <string name="GlassKunaiWeapon">Fusilai</string>
    <string name="GlassHammer">Volnus</string>
    <string name="LaserAimRifle">Argonak</string>
    <string name="TennoTonfa">Kronen</string>
    <string name="MireSword">Mire</string>
    <string name="Glass">Gara</string>
    <string name="TrapperSystemsBlueprint">Vauban Systems Blueprint</string>
    <string name="EmberDeluxeSkin" tools:ignore="Typos">Ember Vermillion Skin</string>
    <string name="MagDeluxeSkin">Mag Pneuma MSkin</string>
    <string name="NekrosDeluxeSkin">Nekros Irkalla Skin</string>
    <string name="MagDeluxeScarf">Vasa Syandana</string>
    <string name="TnGlassSyandana">Hyalus Syandana</string>
    <string name="EmberDeluxeSkinBundle" tools:ignore="Typos">Ember Vermillion Collection</string>
    <string name="GlassBundle">Gara Collection</string>
    <string name="MagDeluxeSkinBundle">Mag Pneuma Collection</string>
    <string name="OperatorArmourBundleMonk">Ceno Armor Bundle</string>
    <string name="OperatorArmourBundleMage">Vahd Armor Bundle</string>
    <string name="OperatorArmourBundleSeer">Zauba Armor Bundle</string>
    <string name="NekrosDeluxeSkinBundle">Nekros Irkalla Collection</string>
    <string name="PriestBundle">Harrow Collection</string>
    <string name="TnGuandaoBundle">Guandao Collection</string>
    <string name="OstronRugBundle">Ostron Rug Collection</string>
    <string name="CorpusHighArmorBundle">Arca Armor Collection</string>
    <string name="PrimeAccess2StoreItem">Hydroid Prime Access Pack</string>
    <string name="TonfaContestWinner">- ???</string>
    <string name="TwitchPrimeStoreItem">Free Prime with Twitch Prime</string>
    <string name="OstronShipDecoPackB">Artisan Pack or ?</string>
    <string name="RandomProjection">Relic Pack</string>
    <string name="OstronShipDecoPackA">Reclamator Pack or ?</string>
    <string name="QuadShotgun">Hek</string>
    <string name="KubrowKavatLowPolyPoster">Prisma Companion Poster</string>
    <string name="SentinelLootRadarEnemyRadarExpertMod">Primed Animal Instinct</string>
</resources>