<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_row_selector"
    android:padding="8dp">

    <TextView
        android:id="@+id/pvp_challenge_ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pvp_challenge_mode"
        android:text="@string/reward"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/pvp_challenge_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pvp_challenge_time"
        android:text="@string/type"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/pvp_challenge_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/mode"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/pvp_challenge_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/time"
        android:textSize="13sp" />

</RelativeLayout>