<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_row_selector"
    android:padding="8dp">

    <TextView
        android:id="@+id/alert_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/location"
        android:textSize="@dimen/location"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/alert_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/time"
        android:textSize="@dimen/time"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/alert_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alert_location"
        android:layout_marginTop="1dip"
        android:text="@string/type"
        android:textSize="@dimen/type" />

    <TextView
        android:id="@+id/alert_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/alert_type"
        android:text="@string/level"
        android:textSize="@dimen/level" />

    <TextView
        android:id="@+id/alert_reward_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/alert_type"
        android:text="@string/reward"
        android:textSize="@dimen/reward" />

    <TextView
        android:id="@+id/alert_reward_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/alert_level"
        android:text="@string/reward"
        android:textSize="@dimen/reward" />

</RelativeLayout>