<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_row_selector"
    android:padding="8dp">

    <TextView
        android:id="@+id/market_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/market_item_time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/time"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/market_item_reduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reduction"
        android:textSize="13sp"
        android:layout_below="@+id/market_item_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>