<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_row_selector"
    android:padding="8dp">

    <TextView
        android:id="@+id/void_trader_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/void_trader_item_ducat_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/void_trader_item_name"
        android:layout_alignRight="@+id/void_trader_item_name"
        android:layout_alignStart="@+id/void_trader_item_name"
        android:layout_below="@+id/void_trader_item_name"
        android:text="@string/ducat"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/void_trader_item_credit_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/void_trader_item_name"
        android:text="@string/credit"
        android:textSize="13sp" />

</RelativeLayout>