<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_row_selector"
    android:padding="8dp">

    <TextView
        android:id="@+id/construction_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sortie_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/type"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/invasion_reward_attacker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/darvo_current"
        android:text="@string/reward"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/invasion_reward_defender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/darvo_current"
        android:text="@string/reward"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/darvo_current"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/construction_status"
        android:background="@android:color/black"
        android:indeterminate="false"
        android:max="100"
        android:progress="50" />

    <TextView
        android:id="@+id/invasion_percent_attacker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/invasion_reward_attacker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/construction_status"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/percent"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/invasion_percent_defender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/invasion_reward_defender"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/darvo_current"
        android:gravity="center_vertical"
        android:paddingRight="16dp"
        android:text="@string/percent"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold" />

</RelativeLayout>